cmake_minimum_required(VERSION 3.12)
project(MU-egco-111 C)

set(CMAKE_C_STANDARD 90)
add_executable(1 28-09-2018/1.c)
add_executable(2 28-09-2018/2.c)
add_executable(3 28-09-2018/3.c)
add_executable(4 28-09-2018/4.c)
add_executable(5 28-09-2018/5.c)

add_executable(6 28-09-2018/6.c)
add_executable(7 28-09-2018/7.c)
add_executable(8 28-09-2018/8.c)
add_executable(9 28-09-2018/9.c)